# agent_workflow

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json
.ai_agents/: task_memory.json
AgentWorker/CodeAssistant/: code_assistant_worker.py
AgentWorker/CodeAssistant/configs/: llm_config.yaml  output_control.yaml  tools.yaml
AgentWorker/CodeAssistant/sop/: sop.md
AgentWorker/ContentGeneration/: content_generation_worker.py
AgentWorker/ContentGeneration/configs/: llm_config.yaml  output_control.yaml  tools.yaml
AgentWorker/DataAnalysis/: data_analysis_worker.py
AgentWorker/DataAnalysis/configs/: analysis_agent.yaml  llm_config.yaml  output_control.yaml  tools.yaml
docs/: agent-development-guide.md  api-reference.md  configuration-guide.md  deployment-guide.md  troubleshooting.md
src/agents/: __init__.py
src/agents/factory/: __init__.py  agent_factory.py
src/agents/micro/: __init__.py  base_micro_agent.py  smolagents_micro.py
src/agents/supervisor/: __init__.py  base_supervisor_agent.py  smolagents_supervisor.py
src/core/: __init__.py
src/core/config/: __init__.py  agent_config.py  agent_worker_config.py  config_manager.py  config_parser.py  llm_config.py  llm_manager.py
src/core/memory/: __init__.py  memory.py
src/core/output_control/: README.md  __init__.py  constraints.py  controller.py  models.py  processor.py  validator.py
src/core/task_types/: __init__.py  task_types.py
src/core/tracing/: __init__.py  tracing.py
src/integrations/: __init__.py
src/integrations/langfuse/: __init__.py
src/integrations/llm_providers/: __init__.py
src/tools/: __init__.py  tool_descriptions.py
src/tools/analysis/: __init__.py
src/tools/analysis/data/: __init__.py
src/tools/analysis/text/: __init__.py  text_grep.py
src/tools/development/: __init__.py  memory_commands.py
src/tools/development/code_analysis/: __init__.py  treesitter_parser.py
src/tools/development/file_ops/: __init__.py  file_operations.py  project_analysis.py
src/tools/development/git/: __init__.py  git_commands.py
src/tools/operations/: __init__.py
src/tools/operations/docker/: __init__.py
src/tools/operations/monitoring/: __init__.py
src/tools/operations/system/: __init__.py  docker_commands.py  system_commands.py
src/workflows/: __init__.py
src/workflows/automation/: __init__.py  workflow_manager.py
src/workflows/engine/: __init__.py  workflow_executor.py
src/workflows/sop/: __init__.py
src/workflows/templates/: __init__.py
